Fri Dec 28 21:40:36 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/context.rb: IRB::Context#new: Check from JobManager
	  inside IRB namespace [Bug #7628]. Thanks rafaelfranca for bug
	  report and its patch.

Fri Dec 28 17:06:17 2012  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-curlies): Automatically
	  indent closing curly brackets when
	  ruby-electric-newline-before-closing-bracket is true.

Fri Dec 28 11:50:42 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_yield_setup_block_args): pass single argument to
	  single optional parameter unchanged without splatting.  [Bug #7621]
	  [ruby-dev:46801]

Fri Dec 28 11:17:47 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* proc.c (method_eq): fix the documentation to refer to owner.
	  [ruby-core:51105] [Bug #7613]

	* test/ruby/test_method.rb (test_alias_onwer): new test to confirm
	  that `a == b' returns false if owners of a and b are different.

Fri Dec 28 07:07:43 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* def/id.def: use split(/^/) instead of String#lines to support
	  Ruby 1.8.5 as BASERUBY.

Thu Dec 27 21:56:56 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* variable.c (rb_mod_remove_const): fix segv caused by r38558.

Tue Dec 28 01:13:48 2012  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Added more Hash methods to CSV::Row.

Thu Dec 27 23:27:15 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: make lex_state to EXPR_END when next token
	  is an operator after SYMBEG [Bug #6378].

Thu Dec 27 21:30:21 2012  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: allow to handle recursive heredocs on
	  irb[Bug #5648].

Thu Dec 27 20:45:29 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* ext/stringio/stringio.c (strio_getline): fix not to raise TypeError
	  when limit is nil.
	  [Bug #7232] [ruby-core:48531]

	* test/stringio/test_stringio.rb: a test for above.
